add contacts to URL
