# Week04/routes/index.js
@@ -1,19 +1,8 @@
 const swagger = require('./swagger');
 const express = require('express');
-const routes = express.Router();
+const router = express.Router();
 
-const myControllers = require('../controllers');
+router.use('/', swagger);
+router.use('/contacts', require('./contacts'));
 
-routes.use('/', swagger);
-
-routes.get('/', myControllers.getData);
-
-routes.get('/:id', myControllers.getOne);
-
-routes.post('/', myControllers.addContact);
-
-routes.put('/:id', myControllers.updateContact);
-
-routes.delete('/:id', myControllers.deleteContact);
-
-module.exports = routes;
+module.exports = router;
